--- a/src/resources/scss/admin/_tabs.scss
+++ b/src/resources/scss/admin/_tabs.scss
@@ -85,7 +85,7 @@
 
 		h4.pngx-fields-heading {
 			.pngx-wrapper & {
-				margin: 0 0 0 rem-calc(-10);
+				margin: 0;
 
 				@include breakpoint_max('md') {
 					margin-left: 0;
@@ -105,6 +105,7 @@
 
 	.pngx-tabs-panel.ui-tabs-panel.ui-widget-content h4 {
 		font-weight: bold;
+		margin: 0;
 
 		@include breakpoint('sm') {
 			font-size: rem-calc(24);
